--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="title_activity_tabbed">TabbedActivity</string>
     <string name="tab_text_1">Exercise</string>
     <string name="tab_text_2">Word List</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_sort">Sort by</string>
+    <string name="sortby_title">Sort by</string>
 </resources>
