--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="tab_text_1">Exercise</string>
     <string name="tab_text_2">Word List</string>
     <string name="action_sort">Sort by</string>
+    <string name="action_exercisetype">Exercise type</string>
     <string name="sortby_title">Sort by</string>
+    <string name="exercisetype_title">Exercise type</string>
 
 </resources>
