--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="drawer_new">Learn New Words</string>
     <string name="drawer_random">Practice Random Words</string>
     <string name="drawer_list">Word List</string>
+    <string name="drawer_stats">Statistics</string>
     <string name="action_sort">Sort by</string>
     <string name="action_exercisetype">Exercise type</string>
     <string name="sortby_title">Sort by</string>
