Added support for the Mozilla Common Voice dataset Added DB versioning

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_selectiontype">Selection type</string>
+    <string name="action_datasetpath">Audio dataset path</string>
     <string name="action_sort">Sort by</string>
     <string name="app_name">KelimeEzber</string>
     <string name="drawer_exercise">Exercise</string>
