--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="action_selectlang">Language</string>
     <string name="action_selectionmethod">Selection method</string>
     <string name="action_datasetpath">Audio dataset path</string>
     <string name="action_sort">Sort by</string>
@@ -11,6 +12,7 @@
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="search_menu_title">Search</string>
+    <string name="selectlang_title">Language</string>
     <string name="selectionmethod_title">Selection method</string>
     <string name="sortby_title">Sort by</string>
 </resources>
